--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
   "name": "solid_incarnation",
   "description": "Cross Platform Composable NFT Avatar",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "main": "index.js",
   "repository": "https://github.com/Aimee-MacDonald/solid_incarnation.git",
   "author": "Aimee MacDonald <aimeelmacdonald@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.6",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "chai": "^4.3.6",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^5.6.8",
+    "hardhat": "^2.9.9"
+  }
 }
