--- a/package.json
+++ b/package.json
@@ -1,22 +1,37 @@
 {
   "name": "solid_incarnation",
   "description": "Cross Platform Composable NFT Avatar",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "main": "index.js",
   "repository": "https://github.com/Aimee-MacDonald/solid_incarnation.git",
   "author": "Aimee MacDonald <aimeelmacdonald@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node src/backend/server.js"
+    "start": "node src/backend/server.js",
+    "compile_frontend": "webpack --config webpack.config.js --watch"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.6.0",
+    "babel-loader": "^8.2.5",
     "chai": "^4.3.6",
+    "css-loader": "^6.7.1",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.8",
-    "hardhat": "^2.9.9"
+    "hardhat": "^2.9.9",
+    "mini-css-extract-plugin": "^2.6.1",
+    "normalize.css": "^8.0.1",
+    "postcss-loader": "^7.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.52.3",
+    "sass-loader": "^13.0.0",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
     "dotenv": "^16.0.1",
