--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "solid_incarnation",
   "description": "Cross Platform Composable NFT Avatar",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "main": "index.js",
   "repository": "https://github.com/Aimee-MacDonald/solid_incarnation.git",
   "author": "Aimee MacDonald <aimeelmacdonald@gmail.com>",
@@ -18,6 +18,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.6.0",
     "babel-loader": "^8.2.5",
+    "base64-sol": "^1.1.0",
     "chai": "^4.3.6",
     "css-loader": "^6.7.1",
     "ethereum-waffle": "^3.4.4",
