--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "solid_incarnation",
   "description": "Cross Platform Composable NFT Avatar",
-  "version": "0.0.5",
+  "version": "0.1.0",
   "main": "index.js",
   "repository": "https://github.com/Aimee-MacDonald/solid_incarnation.git",
   "author": "Aimee MacDonald <aimeelmacdonald@gmail.com>",
   "license": "MIT",
   "scripts": {
     "start": "node src/backend/server.js",
-    "compile_frontend": "webpack --config webpack.config.js --watch"
+    "compile_frontend": "webpack --config webpack.config.js --watch",
+    "heroku-postbuild": "npx hardhat compile && webpack --config webpack.config.js"
   },
   "devDependencies": {
     "@babel/core": "^7.18.5",
